# Renderer-OpenGL

./: CMakeLists.txt  LICENSE  README.md  ž
.cache/clangd/index/: EBO.h.8B5F6D09AF3A5E75.idx  Logger.cpp.F27857D57955A598.idx  Logger.h.FB3D3D6AD31F83AD.idx  Material.cpp.DADBC42E3868570F.idx  Material.h.565ADD4FB724E5E5.idx  Mesh.cpp.1058EF71D44EAB21.idx  Mesh.h.BC5C8082A5B07EF2.idx  Render_object.h.7CECAD6B90B8995A.idx  Renderer.cpp.891BF1535E80B7B7.idx  Renderer.h.CAC43D99EE53E5E0.idx  Shader.cpp.1F2766A7A16D4D10.idx  Shader.h.3303C08C5BC81460.idx  Shader_program.cpp.AA8E70F31FA2C3EC.idx  Shader_program.h.A7CE49D5E69BAE83.idx  VAO.cpp.01A8B9A4C031EF6C.idx  VAO.h.2B7CAA56FFC04961.idx  VBO.cpp.004C3C6433F16A35.idx  VBO.h.681C9A77BDB6E634.idx  glad.c.21E874D0A703A4C4.idx  glad.h.7A370FFD9E143DFE.idx  khrplatform.h.59771F95699F002B.idx  main.cpp.5FBB37ED53F923A7.idx
examples/: CMakeLists.txt  main.cpp
include/renderer/: Camera.h  EBO.h  Logger.h  Material.h  Mesh.h  Render_object.h  Renderer.h  Scene.h  Shader.h  Shader_program.h  Texture.h  Transform.h  Triangle.h  VAO.h  VBO.h
shaders/: default.frag  default.vert
src/renderer/: Camera.cpp  EBO.cpp  Logger.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Shader_program.cpp  Texture.cpp  Transform.cpp  VAO.cpp  VBO.cpp
